feat: evanotebook for javascript

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es-MX">
 <head>
   <meta charset="utf-8">
-  <title>EvaSim Terminal</title>
+  <title>EvaNotebook - JavaScript Notebook</title>
   <base href="/terminal">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/svg+xml" href="/terminal/favicon.svg" />
