--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
       <p>
         Build your awesome ideas faster with no servers. Learn more <a href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">here.</a>
       </p>
+      <p>
+        Loading...
+      </p>
     </section>
   </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
