chore: we've changed iframe design

--- a/jsonforms-react-seed/public/index.html
+++ b/jsonforms-react-seed/public/index.html
@@ -11,6 +11,20 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+    <script>
+        // Listen parent messages
+        window.addEventListener("message", (e) => {
+          if (e?.ports.length > 0) {
+            // @ts-ignore
+            window.evanotebook_port = e.ports[0];
+            window.evanotebook_port.onmessage = (event) => {
+              window.evanotebook_schema = event.data.schema;
+              window.evanotebook_data = event.data.data;
+              window.evanotebook_uischema = event.data.uischema;
+            };
+          }
+        });
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
