--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es-MX">
 <head>
   <meta charset="utf-8">
-  <title>EvaNotebook - JavaScript Notebook</title>
+  <title>EvaNotebook</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
@@ -10,17 +10,7 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
-  <app-root>
-    <section class="getting-started">
-      <h1>EvaNotebook</h1>
-      <p>
-        Build your awesome ideas faster with no servers. Learn more <a href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">here.</a>
-      </p>
-      <p>
-        Loading...
-      </p>
-    </section>
-  </app-root>
+  <app-root>Loading...</app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
