--- a/jsonforms-react-seed/public/index.html
+++ b/jsonforms-react-seed/public/index.html
@@ -20,6 +20,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script>
+      window.addEventListener('message', (e) => {
+        console.log("IFRAME MESSAGE", e);
+      });
+    </script>
     <title>jsonforms-react-seed</title>
   </head>
   <body>
