feat: prerender notebook

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <title>EvaNotebook</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A collaborative peer-to-peer notebook for Web Technologies based on reactive observables, designed to run primarily in modern web browsers.">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
