chore(beta): use python as programming language

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,16 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 </head>
 <body class="mat-typography">
+<py-config>
+  [splashscreen]
+  enabled = false
+  terminal = true
+</py-config>
+
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
