--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+  <link rel="stylesheet" href="/assets/pyscript/pyscript.css" />
+  <script defer src="/assets/pyscript/pyscript.js"></script>
 </head>
 <body class="mat-typography">
 <py-config>
+  terminal = false
   [splashscreen]
   enabled = false
-  terminal = true
 </py-config>
 
   <app-root></app-root>
