chore: improve user experience showing correctly pyscript

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
 </head>
 <body class="mat-typography">
 <py-config>
+  packages = ["matplotlib", "pandas"]
   terminal = false
   [splashscreen]
   enabled = false
 </py-config>
-
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
