fix: solve some local conflicts during user changes

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <link rel="stylesheet" href="/assets/pyscript/pyscript.css" />
-  <script defer src="/assets/pyscript/pyscript.js"></script>
+<!--  <link rel="stylesheet" href="/assets/pyscript/pyscript.css" />-->
+<!--  <script defer src="/assets/pyscript/pyscript.js"></script>-->
 </head>
 <body class="mat-typography">
 <py-config>
