feat: the output is shown when notebook is in mode 2

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>EvaNotebook</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A collaborative peer-to-peer notebook for Web Technologies based on reactive observables, designed to run primarily in modern web browsers.">
+  <meta name="description" content="The Ultimate P2P Browser Notebook for Fast AI System Development!">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
