--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <script>
+    window.global = window;
+  </script>
   <script defer src="https://cdn.jsdelivr.net/pyodide/v0.23.1/full/pyodide.js"></script>
 </body>
 </html>
