feat: create assistant with gradio web component

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,7 @@
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
   <script defer src="https://cdn.jsdelivr.net/pyodide/v0.23.1/full/pyodide.js"></script>
+  <script defer type="module" src="https://gradio.s3-us-west-2.amazonaws.com/4.4.1/gradio.js"
+  ></script>
 </body>
 </html>
